# Agnes-os

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.TXT  Makefile  README.md  bootstrap.sh  multiboot.asm
cmake/: CMakeASM_FASMGInformation.cmake  CMakeDetermineASM_FASMGCompiler.cmake  CMakeTestASM_FASMGCompiler.cmake  fasmg-wrapper.sh
misc/vscode/: launch.json  tasks.json
src/: Makefile
src/boot/: CMakeLists.txt  main.asm  multiboot.asm  stack.asm
src/kernel/: CMakeLists.txt  main.c
